[gd_scene load_steps=10 format=3 uid="uid://dlw4y68fq4syw"]

[ext_resource type="Script" uid="uid://c5sh0sv5xwhfs" path="res://scenes/Audio Manager/audio_manager.gd" id="1_8rbl1"]
[ext_resource type="Texture2D" uid="uid://cb1qhcu65hcho" path="res://assets/Menu/Soundeinstellungen.png" id="2_di7gk"]
[ext_resource type="FontFile" uid="uid://baj3xxd4vtp7g" path="res://assets/Fonts/Believe Heart.otf" id="2_tq6fd"]
[ext_resource type="Texture2D" uid="uid://bcbvcoia1xyc5" path="res://assets/Menu/sliderIcon.png" id="4_di7gk"]
[ext_resource type="Texture2D" uid="uid://1cs2dluqght6" path="res://assets/Menu/FurtherOptions/sliderIcon.png" id="5_u1kl0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_di7gk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u1kl0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_53vou"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t2fqo"]

[node name="AudioManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8rbl1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_di7gk")

[node name="Return" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1507.0
offset_top = 258.0
offset_right = -1360.0
offset_bottom = 384.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_tq6fd")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = SubResource("StyleBoxEmpty_di7gk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_u1kl0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_53vou")
theme_override_styles/normal = SubResource("StyleBoxEmpty_t2fqo")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.0
offset_top = -166.0
offset_right = 408.0
offset_bottom = 501.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.0188989
theme_override_constants/separation = 10

[node name="MasterVolumeSlider" type="HSlider" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("4_di7gk")
theme_override_icons/grabber_highlight = ExtResource("4_di7gk")
theme_override_icons/grabber_disabled = ExtResource("4_di7gk")
max_value = 1.0
step = 0.0
value = 1.0

[node name="MusicVolumeSlider" type="HSlider" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("4_di7gk")
theme_override_icons/grabber_highlight = ExtResource("4_di7gk")
theme_override_icons/grabber_disabled = ExtResource("4_di7gk")
max_value = 1.0
step = 0.0
value = 1.0

[node name="SFXVolumeSlider" type="HSlider" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("5_u1kl0")
theme_override_icons/grabber_highlight = ExtResource("5_u1kl0")
theme_override_icons/grabber_disabled = ExtResource("5_u1kl0")
max_value = 1.0
step = 0.0
value = 1.0

[connection signal="pressed" from="TextureRect/Return" to="." method="_on_return_pressed"]
[connection signal="value_changed" from="TextureRect/VBoxContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="TextureRect/VBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="TextureRect/VBoxContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
